@@ -1,3 +1,8 @@
+2013-12-19  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Further tweaking of the grid numerics parsing, using a variation
+	on Gavin Salam's FastIStringStream class.
+
 2013-12-17  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Replacing use of the tokenizing istringstream in GridPDF.cc with
